--- a/vk-api-xrc.cabal
+++ b/vk-api-xrc.cabal
@@ -59,9 +59,9 @@ executable vk-api-xrc
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.7 && <4.8,
                        HTTP >=4000,
-                       hxt >=9.3.1.7
-
-
+                       hxt >=9.3.1.7,
+                       http-conduit,
+                       bytestring
   
   -- Directories containing source files.
   -- hs-source-dirs:      
