--- a/vk-api-xrc.cabal
+++ b/vk-api-xrc.cabal
@@ -51,7 +51,9 @@ executable vk-api-xrc
   main-is:             Main.hs
   
   -- Modules included in this executable, other than Main.
-  -- other-modules:       
+  other-modules: TagsLexer
+               , TagsParser
+               , Classes
   
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:    
@@ -61,7 +63,8 @@ executable vk-api-xrc
                        HTTP >=4000,
                        hxt >=9.3.1.7,
                        http-conduit,
-                       bytestring
+                       bytestring,
+                       array
 
 
   
